# DendroCaptures

./: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.ts
docs/: windows-and-oauth-verification.md
scripts/: package-installer-zip.ps1  package-installer.mjs  prepare-ocr-assets.mjs
src/: annotationEditor.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  artifact-signing.metadata.sample.json  sign-windows-artifact.ps1  tauri.conf.json  tauri.signing.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
