[package]
name = "dendro_capture"
version = "0.1.20"
description = "DendroCapture desktop screenshot client"
authors = ["Dendro Studios"]
edition = "2021"

[lib]
name = "dendro_capture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
image = { version = "0.24", default-features = false, features = ["png"] }
keyring = { version = "3", features = ["windows-native", "apple-native"] }
rand_core = { version = "0.6", features = ["getrandom"] }
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
thiserror = "2"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }
