[package]
name = "dendro_capture"
version = "0.1.46"
description = "DendroCapture desktop screenshot client"
authors = ["Dendro Studios"]
edition = "2021"

[lib]
name = "dendro_capture_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
arboard = "3"
base64 = "0.22"
ed25519-dalek = { version = "2", features = ["rand_core"] }
image = { version = "0.24", default-features = false, features = ["png"] }
keyring = { version = "3", features = ["windows-native", "apple-native"] }
rand_core = { version = "0.6", features = ["getrandom"] }
screenshots = "0.8"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-autostart = "2"
tauri-plugin-global-shortcut = "2"
tauri-plugin-opener = "2"
tauri-plugin-single-instance = "2"
thiserror = "2"
windows-sys = { version = "0.61", features = [
  "Win32_Foundation",
  "Win32_Graphics_Gdi",
  "Win32_System_DataExchange",
  "Win32_System_LibraryLoader",
  "Win32_UI_Input_KeyboardAndMouse",
  "Win32_System_Threading",
  "Win32_UI_WindowsAndMessaging"
] }

# Image work is far too slow at opt-level 0; keep these fast even in `tauri dev`.
[profile.dev.package.image]
opt-level = 3

[profile.dev.package.png]
opt-level = 3

[profile.dev.package.miniz_oxide]
opt-level = 3

[profile.dev.package.fdeflate]
opt-level = 3

[profile.dev.package.screenshots]
opt-level = 3

[profile.release]
codegen-units = 1
lto = true
opt-level = 3
strip = true
